CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)
PROJECT (NJLIGameEngine)
include (CPack)
#INCLUDE (CTest)

SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)

SET( CMAKE_INSTALL_INCLUDEDIR include/ CACHE STRING "The include directory" )
SET( CMAKE_INSTALL_DATADIR data/ CACHE STRING "The data directory" )
SET( CMAKE_INSTALL_DOCDIR doc/ CACHE STRING "The documentation directory" )
SET( CMAKE_INSTALL_TESTDIR tests/ CACHE STRING "The tests directory" )
SET( NJLI_THIRDPARTY_DIRECTORY "${CMAKE_SOURCE_DIR}/../External/thirdparty/" CACHE STRING "The third party include directory")

SET ( NJLI_GRAPHICS_PLATFORM opengl_es_2.0 CACHE STRING  "The rendering platform to use" )
SET ( NJLI_BUILD_PLATFORM macOS CACHE STRING "The platform being created" )
SET ( NJLI_SOUND_PLATFORM fmod CACHE STRING "The sound to use" )

SET( NJLI_SOURCE_DIRECTORY "${CMAKE_SOURCE_DIR}/src" CACHE STRING "The njli source directory")
SET( NJLI_SWIGIN_DIRECTORY "${CMAKE_SOURCE_DIR}/src/swig.in/" CACHE STRING "The njli source directory")

option ( GENERATE_DOCUMENTATION "Whether to build the documentation or not" OFF )
option ( GENERATE_LIB "Whether to build the documentation or not" ON )

macro(BUILD_DOCUMENTATION)
    FIND_PACKAGE(Doxygen)
    IF(DOXYGEN_FOUND)
        CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
        ADD_CUSTOM_TARGET(doc ALL
            ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in
            COMMENT "Generating API documentation with Doxygen" VERBATIM
            )
        INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/docbook DESTINATION ${CMAKE_INSTALL_DOCDIR})
        INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/html DESTINATION ${CMAKE_INSTALL_DOCDIR})
        INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/latex DESTINATION ${CMAKE_INSTALL_DOCDIR})
        INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/rtf DESTINATION ${CMAKE_INSTALL_DOCDIR})
        INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/xml DESTINATION ${CMAKE_INSTALL_DOCDIR})
    ENDIF(DOXYGEN_FOUND)

    ADD_CUSTOM_TARGET(luadoc ALL
        ldoc ${CMAKE_CURRENT_SOURCE_DIR}/cmake.in/ldoc.in/
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        COMMENT "Generating API documentation with LDoc" VERBATIM
        )
    INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ldoc DESTINATION ${CMAKE_INSTALL_DOCDIR})

    SET(NJLIGameEngine_TESTFILES
        ${CMAKE_SOURCE_DIR}/cmake.in/Tests.in/lua/njli_test.lua
        )
    INSTALL(FILES ${NJLIGameEngine_TESTFILES} DESTINATION ${CMAKE_INSTALL_TESTDIR})

    SET(NJLIGameEngine_DATAFILES
        ${CMAKE_SOURCE_DIR}/cmake.in/DoxyFiles.in/images/logo.png
        )
    INSTALL(FILES ${NJLIGameEngine_DATAFILES} DESTINATION ${CMAKE_INSTALL_DATADIR})
endmacro()


macro( BUILD_PLATFORM )

    # The version number.
    SET (NJLIGameEngine_VERSION_MAJOR 1)
    SET (NJLIGameEngine_VERSION_MINOR 0)

    # configure a header file to pass some of the CMake settings
    # to the source code
    CONFIGURE_FILE (
        "${CMAKE_SOURCE_DIR}/cmake.in/NJLIGameEngineConfig.h.in"
        "${NJLI_SOURCE_DIRECTORY}/njli/generated/NJLIGameEngineConfig.h"
        )

    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY} )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/assimp )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3 )

    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet2FileLoader )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet2FileLoader/autogenerated )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Collision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Collision/BroadPhaseCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Collision/BroadPhaseCollision/shared )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Collision/NarrowPhaseCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Collision/NarrowPhaseCollision/shared )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Common )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Common/shared )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Dynamics )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Dynamics/ConstraintSolver )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Dynamics/shared )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3Geometry )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/BroadphaseCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/BroadphaseCollision/kernels )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/Initialize )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/NarrowphaseCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/NarrowphaseCollision/kernels )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/ParallelPrimitives )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/ParallelPrimitives/kernels )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/Raycast )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/Raycast/kernels )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/RigidBody )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/Bullet3OpenCL/RigidBody/kernels )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletCollision/BroadphaseCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletCollision/CollisionDispatch )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletCollision/CollisionShapes )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletCollision/Gimpact )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletCollision/NarrowPhaseCollision )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics/Character )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics/ConstraintSolver )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics/Dynamics )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics/Featherstone )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics/MLCPSolvers )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletDynamics/Vehicle )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletFileLoader )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletFileLoader/autogenerated )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletInverseDynamics )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletInverseDynamics/details )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletSoftBody )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletWorldImporter )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/BulletXmlWorldImporter )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/ConvexDecomposition )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/GIMPACTUtils )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/HACD )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/InverseDynamics )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/bullet3/LinearMath )


    #INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/debug-draw )
    #INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/flatbuffers )
    #INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/glfw )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/glm )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/fmod/include )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/imgui )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/ImGuizmo )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/jsoncpp )
    #INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/lua )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/nanovg )
    #INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/opencv )
    #INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/sqlite )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/stb )
    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/include/tinyxml2 )

    INCLUDE_DIRECTORIES( ${NJLI_THIRDPARTY_DIRECTORY}/Native_SDK/Builds/Include )


    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/bullet )
    #INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua )
    #INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/cmake )
    #INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/doc )
    #INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/etc )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/src )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/exts )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/exts/cjson )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/lua/exts/luasocket )

    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/graphics )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/body )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/constraint )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/shape )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/platform )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/sound )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/steering )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/builders/steering/behavior )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/generated )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/generated/swig )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/generated/swig/lua )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/graphics )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/physics )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/physics/body )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/physics/constraint )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/physics/shape )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/platform )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/platform/${NJLI_BUILD_PLATFORM} )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/sound )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/steering )
    INCLUDE_DIRECTORIES( ${NJLI_SOURCE_DIRECTORY}/njli/steering/behavior )

    SET(NJLIGameEngine_PUBLIC_HDRS
        ${NJLI_SOURCE_DIRECTORY}/njli/platform/Game.h 
        )

    file(GLOB Lua_SRCS
        "${NJLI_SOURCE_DIRECTORY}/njli/generated/swig/lua/*.h"
        "${NJLI_SOURCE_DIRECTORY}/njli/generated/swig/lua/*.cpp"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/lualoadexts.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/lualoadexts.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/auxiliar.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/auxiliar.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/buffer.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/buffer.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/compat.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/compat.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/except.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/except.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/inet.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/inet.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/io.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/io.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/luasocket.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/luasocket.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/mime.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/mime.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/options.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/options.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/pierror.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/select.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/select.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/serial.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/socket.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/tcp.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/tcp.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/timeout.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/timeout.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/udp.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/udp.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/unix.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/unix.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/unixdgram.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/unixdgram.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/unixstream.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/unixstream.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/usocket.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/usocket.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/wsocket.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocket/wsocket.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocketscripts.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/xts/luasocketscripts.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lapi.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lapi.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lauxlib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lauxlib.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lbaselib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lbitlib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lcode.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lcode.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lcorolib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lctype.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lctype.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ldblib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ldebug.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ldebug.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ldo.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ldo.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ldump.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lfunc.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lfunc.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lgc.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lgc.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/linit.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/liolib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/llex.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/llex.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/llimits.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lmathlib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lmem.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lmem.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/loadlib.c"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/loadlib_rel.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lobject.c"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/lobject.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lopcodes.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lopcodes.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/loslib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lparser.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lparser.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lprefix.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lstate.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lstate.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lstring.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lstring.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lstrlib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ltable.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ltable.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ltablib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ltm.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/ltm.h"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/lua.c"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/lua.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lua.hpp"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/lua.rc"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/luac.c"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/luac.rc"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/luaconf.h.in"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/luaconf.h"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/lualib.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lundump.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lundump.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lutf8lib.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lvm.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lvm.h"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lzio.c"
        "${NJLI_SOURCE_DIRECTORY}/lua/src/lzio.h"
        #"${NJLI_SOURCE_DIRECTORY}/lua/src/wmain.c"
        )

    file(GLOB NJLIGameEngineBase_SRCS
        ${NJLI_SOURCE_DIRECTORY}/bullet/*.h
        ${NJLI_SOURCE_DIRECTORY}/bullet/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/graphics/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/graphics/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/body/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/body/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/constraint/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/constraint/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/shape/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/physics/shape/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/platform/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/platform/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/sound/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/sound/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/steering/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/steering/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/steering/behavior/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/builders/steering/behavior/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/generated/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/generated/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/generated/swig/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/generated/swig/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/graphics/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/graphics/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/graphics/${NJLI_GRAPHICS_PLATFORM}/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/graphics/${NJLI_GRAPHICS_PLATFORM}/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/body/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/body/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/constraint/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/constraint/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/shape/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/physics/shape/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/platform/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/platform/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/platform/${NJLI_BUILD_PLATFORM}/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/platform/${NJLI_BUILD_PLATFORM}/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/sound/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/sound/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/sound/${NJLI_SOUND_PLATFORM}/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/sound/${NJLI_SOUND_PLATFORM}/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/steering/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/steering/*.cpp
        ${NJLI_SOURCE_DIRECTORY}/njli/steering/behavior/*.h
        ${NJLI_SOURCE_DIRECTORY}/njli/steering/behavior/*.cpp
        )

    file(GLOB NJLIGameEngine_SRCS
        ${NJLIGameEngineBase_SRCS}
        ${Lua_SRCS} 
        )

    ADD_LIBRARY( libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} STATIC ${NJLIGameEngine_SRCS} )
    SET_TARGET_PROPERTIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} PROPERTIES OUTPUT_NAME libnjli)

    INSTALL(TARGETS libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} DESTINATION lib/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE})
    IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libassimpd.a )
    ELSE()
        TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libassimp.a )
    ENDIF()
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet2FileLoader.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Collision.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Common.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Dynamics.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Geometry.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3OpenCL_clew.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletCollision.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletDynamics.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletFileLoader.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletInverseDynamics.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletInverseDynamicsUtils.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletSoftBody.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletWorldImporter.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletXmlWorldImporter.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libConvexDecomposition.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libGIMPACTUtils.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libHACD.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libLinearMath.a )
    #TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/flatbuffers/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libflatbuffers.a )
    IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/fmod/lib/${NJLI_BUILD_PLATFORM}/libfmodL.dylib )
    ELSE()
        TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/fmod/lib/${NJLI_BUILD_PLATFORM}/libfmod.dylib )
    ENDIF()
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/imgui/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libimgui.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/ImGuizmo/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libImGuizmo.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/jsoncpp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libjsoncpp.a )
    #TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/lua/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/liblua.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/nanovg/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libnanovg.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/stb/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libstb.a )
    TARGET_LINK_LIBRARIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/tinyxml2/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libtinyxml2.a )
    SET_TARGET_PROPERTIES(libnjli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} PROPERTIES PREFIX "")

    SET(Binary_FILES
        )

        IF( ${NJLI_BUILD_PLATFORM} STREQUAL "emscripten" )
            SET(Binary_FILES
                ${Binary_FILES}
                #${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/flatbuffers/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/flatc 
                ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/lua/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/lua.js
                ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/lua/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/luac.js
                )
        ELSE()
            SET(Binary_FILES
                ${Binary_FILES}
                #${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/flatbuffers/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/flatc 
                ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/lua/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/lua 
                ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/lua/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/luac 
                )
        ENDIF()

    IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")

                IF( ${NJLI_BUILD_PLATFORM} STREQUAL "emscripten" )
                    SET(Binary_FILES
                        ${Binary_FILES}
                        ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/assimpd.js
                        )
                ELSE()
                    SET(Binary_FILES
                        ${Binary_FILES}
                        ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/assimpd
                        )
                ENDIF()

    ELSE()
                IF( ${NJLI_BUILD_PLATFORM} STREQUAL "emscripten" )
                    SET(Binary_FILES
                        ${Binary_FILES}
                        ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/assimp.js
                        )
                ELSE()
                    SET(Binary_FILES
                        ${Binary_FILES}
                        ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/bin/assimp
                        )
                ENDIF()
    ENDIF()

    INSTALL(PROGRAMS ${Binary_FILES} DESTINATION bin/thirdparty/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE} )

    INCLUDE_DIRECTORIES(${NJLI_SOURCE_DIRECTORY} )

    ADD_LIBRARY( njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} MODULE ${NJLIGameEngine_SRCS} )
    SET_TARGET_PROPERTIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} PROPERTIES OUTPUT_NAME njli)

    IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libassimpd.a )
    ELSE()
        TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/assimp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libassimp.a )
    ENDIF()
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet2FileLoader.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Collision.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Common.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Dynamics.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3Geometry.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBullet3OpenCL_clew.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletCollision.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletDynamics.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletFileLoader.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletInverseDynamics.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletInverseDynamicsUtils.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletSoftBody.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletWorldImporter.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libBulletXmlWorldImporter.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libConvexDecomposition.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libGIMPACTUtils.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libHACD.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/bullet3/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libLinearMath.a )
    #TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/flatbuffers/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libflatbuffers.a )
    IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/fmod/lib/${NJLI_BUILD_PLATFORM}/libfmodL.dylib )
    ELSE()
        TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/fmod/lib/${NJLI_BUILD_PLATFORM}/libfmod.dylib )
    ENDIF()
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/imgui/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libimgui.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/ImGuizmo/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libImGuizmo.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/jsoncpp/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libjsoncpp.a )
    #TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/lua/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/liblua.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/nanovg/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/lib/libnanovg.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/stb/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libstb.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/BUILD/lib/tinyxml2/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE}/libtinyxml2.a )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/Native_SDK/Builds/OSX/x86/Lib/libGLESv2.dylib )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/Native_SDK/Builds/OSX/x86/Lib/libEGL.dylib )
    TARGET_LINK_LIBRARIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} ${NJLI_THIRDPARTY_DIRECTORY}/fmod/lib/${NJLI_BUILD_PLATFORM}/libfmod.dylib )

    SET_TARGET_PROPERTIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} PROPERTIES PREFIX "")
    SET_TARGET_PROPERTIES(njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} PROPERTIES SUFFIX ".so")

    INSTALL(TARGETS njli_${CMAKE_BUILD_TYPE}_${BUILD_COUNTER}_${NJLI_BUILD_PLATFORM} DESTINATION module/${NJLI_BUILD_DIR}/${CMAKE_BUILD_TYPE} )

    INSTALL(FILES ${NJLIGameEngine_PUBLIC_HDRS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

    MATH(EXPR BUILD_COUNTER "${BUILD_COUNTER}+1")
endmacro()

IF(GENERATE_LIB)
    EXECUTE_PROCESS(COMMAND ../swig_lua.sh ${CMAKE_CURRENT_BINARY_DIR}/njli.xml 
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        RESULT_VARIABLE swig_result
        OUTPUT_VARIABLE swig_ver)
    MESSAGE(STATUS "${swig_result}")
    MESSAGE(STATUS "${swig_ver}")
    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/njli.xml DESTINATION ${CMAKE_INSTALL_DATADIR}/swig/lua)
    
    SET( BUILD_COUNTER 1 )
    BUILD_PLATFORM()
ENDIF()

IF(GENERATE_DOCUMENTATION)
    BUILD_DOCUMENTATION()
ENDIF()

# build a CPack driven installer package
include (InstallRequiredSystemLibraries)

SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY "NJLIGameEngine libraries.")
SET (CPACK_PACKAGE_VENDOR "NJLIGames LLC.")
SET (CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET (CPACK_RESOURCE_FILE_LICENSE  "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET (CPACK_PACKAGE_VERSION_MAJOR "${NJLIGameEngine_VERSION_MAJOR}")
SET (CPACK_PACKAGE_VERSION_MINOR "${NJLIGameEngine_VERSION_MINOR}")
SET (CPACK_PACKAGE_VERSION_PATCH "1")
SET (CPACK_PACKAGE_CONTACT "jamesfolk1@gmail.com" )
SET (CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")


